--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -2,25 +2,22 @@
 {% block sign_up %}
     <h1>Sign Up</h1>
     <form action="" method="POST" novalidate>
-        <p> 
-            {{ rform.iin_key_text.label }} <br> 
-            {{ rform.iin_key_text }}
+        <p>
+            {{ rform.category.label }} </br>
+            {{ rform.category }}
+
         </p>
         <p>
-            {{ rform.f_name.label }} <br>
-            {{ rform.f_name }}
-        </p>
-        <p>
-            {{ rform.s_name.label }} <br>
-            {{ rform.s_name }}
-        </p>
-        <p>
-            {{ rform.t_name.label }} <br>
-            {{ rform.t_name }}
+            {{ rform.text.label }} <br>
+            {{ rform.text }}
         </p>
         <p>
             {{ rform.pass_field.label }} <br>
             {{ rform.pass_field }}
+        </p>
+        <p>
+            {{ rform.pass_repeat.label }} <br>
+            {{ rform.pass_repeat }}
         </p>
         <p>
             {{ rform.btn_sbt }}
