--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,8 @@
       <a href="/index">Home</a>
       <a href="/login">Login</a>
       <a href="/signup">Sign up</a>
-      <a href="/logout">Log Out<a>
+      <a href="/logout">Log Out</a>
+      <a href="/rate">show Rate</a>
     </div>
     <hr>
     <div class="content">
