--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
     {% else %}
     <title>microblog</title>
     {% endif %}
+    <link href="static/css/main.css" rel="stylesheet">
   </head>
   <body>
     <div class="her">
