--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block login_block %}
     <h1>Sign In</h1>
+    <div class="her">
     <form action="/login" method="POST" novalidate>
         <p>
             {{ rform.text.label }}<br>
@@ -15,4 +16,5 @@
             {{ rform.btn_sbt }}
         </p>
     </form>
+    </div>
 {% endblock %}
