--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
       <a href="/signup">Sign up</a>
       <a href="/logout">Log Out</a>
       <a href="/rate">show Rate</a>
+      <a href="/edit">Edit</a>
     </div>
     <hr>
     <div class="content">
@@ -25,6 +26,9 @@
     </div>
     <div class="sign_up">
       {% block sign_up %}{% endblock  %}
+    </div>
+    <div class="edit">
+      {% block edit %}{% endblock  %}
     </div>
   </body>
 </html>
