--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,18 +6,36 @@
     <title>microblog</title>
     {% endif %}
     <link href="static/css/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
     <div class="her">
-      Microblog:
-      <a href="/index">Home</a>
-      <a href="/login">Login</a>
-      <a href="/signup">Sign up</a>
-      <a href="/logout">Log Out</a>
-      <a href="/rate">show Rate</a>
-      <a href="/edit">Edit</a>
+      rate system: user info / breadcrumbs
     </div>
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/index">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/rate">show Rate</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/signup">Sign up</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/logout">Log Out</a>
+      </li>
+      <li class="nav-item alert-dark">
+        <a class="nav-link" href="/inds">Indicators</a>
+      </li>
+    </ul>
     <hr>
+    <div class="alert alert-dark" role="alert">
+      dev bransh
+    </div>
     <div class="content">
       {% block content %} {% endblock %}
     </div>
@@ -27,8 +45,8 @@
     <div class="sign_up">
       {% block sign_up %}{% endblock  %}
     </div>
-    <div class="edit">
-      {% block edit %}{% endblock  %}
-    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
