--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="her">
+<div class="head-content">
     <H1>MAIN PAGE</H1>
 </div>
 <h2>{{ user }}</h2>
-    <table border=1px cellpadding=5>
+
+    <table class="table" border="1" cellpadding=5 cellspacing="0">
         <tr>
             <th>Рейтинг</th><th>id учителя</th><th>Фамилия</th><th>Имя</th><th>Сезон</th><th>Критерий</th><th>Группа критерия</th>
         </tr>
