--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block login_block %}
     <h1>Sign In</h1>
-    <div class="her">
+    <div class="login-form">
     <form action="/login" method="POST" novalidate>
         <p>
             {{ rform.text.label }}<br>
