--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,17 +4,20 @@
     <H1>MAIN PAGE</H1>
 </div>
 <h2>{{ user }}</h2>
-
-    <table class="table" border="1" cellpadding=5 cellspacing="0">
-        <tr>
-            <th>Рейтинг</th><th>id учителя</th><th>Фамилия</th><th>Имя</th><th>Сезон</th><th>Критерий</th><th>Группа критерия</th>
-        </tr>
-        {% for r in rec %}
-            <tr>
-            {% for i in r %}
-                <td> {{ i }} </td>
-            {% endfor%}
-            </tr>
-        {% endfor %}
-    </table>
+    <div class="row">
+        <div class="col-xs-12 col-md-12 col-sm-12 col-xs-12">
+            <table class="table" cellpadding=5 cellspacing="0">
+                <tr>
+                    <th>Рейтинг</th><th>id учителя</th><th>Фамилия</th><th>Имя</th><th>Сезон</th><th>Критерий</th><th>Группа критерия</th>
+                </tr>
+                {% for r in rec %}
+                    <tr>
+                    {% for i in r %}
+                        <td> {{ i }} </td>
+                    {% endfor%}
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
+    </div>
 {% endblock %}
