--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,10 @@
     {% endif %}
     <link href="static/css/main.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container-fluid">
@@ -39,6 +43,49 @@
     </div>
     
     <hr>
+    <h2>{{ user }}</h2>
+<script>
+    function get_len() {
+        console.log(jQuery.ajax);
+        jQuery.ajax({
+            type: "POST",
+            url: "/get_len",
+            data: $('form').serialize(),
+            type: 'POST',
+            success: function(response) {
+                var json = jQuery.parseJSON(response)
+                $('#len').html(json.len)
+                console.log(response);
+            },
+            error: function(error) {
+                console.log(error);
+            }
+        });
+    }
+</script>
+<script>
+  function get_inds() {
+      jQuery.ajax({
+        type: "POST",
+        url: "/get_inds",
+        data: $('form').serialize(),
+        success: function(response) {
+          var json = jQuery.parseJSON(response)
+          $('#len').html(json.content);
+        }, 
+        error: function(error) {
+          console.log(error);
+        }
+      });
+    }
+</script>
+<form action="/get_len" method="post" name="form">
+    <label for="name">Введите текст:</label>
+    <input id="name" name="name" type="text">
+    <input type="button" value="Отправить" onclick="get_len();">
+    <input type="button" value="Indicators" onclick="get_inds();">
+</form>
+<div class="row" id="len"></div>
     <div class="alert alert-dark" role="alert">dev branch</div>
     <div class="content">
       {% block content %} {% endblock %}
@@ -50,8 +97,6 @@
       {% block sign_up %}{% endblock  %}
     </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
   </body>
 </html>
