--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block login_block %}
+<div class="block_form">
     <h1>Sign In</h1>
     <div class="login-form">
     <form action="/login" method="POST" novalidate>
@@ -17,4 +18,5 @@
         </p>
     </form>
     </div>
+</div>
 {% endblock %}
