--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -98,7 +98,7 @@
     <div class="sign_up">
       {% block sign_up %}{% endblock  %}
     </div>
-{#    <canvas class="bg-dark" id="marksChart" width="360" height="240" onclick="build_chart_by_query()"></canvas>#}
+{#    <canvas class="bg-dark" id="marksChart" width="360" height="240" onclick="getIndsAndRate()"></canvas>#}
     </div>
 {#    <script type="text/javascript" src="/static/js/charts/chartBuilder.js"></script>#}
   </body>
