--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block sign_up %}
     <h1>Sign Up</h1>
-    <form action="" method="POST" novalidate>
+    <form action="" method="POST" validate>
         
             {{ rform.category.label }}
             {{ rform.category }}
