--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,6 +3,9 @@
 <div class="block_form">
     <h1>Sign In</h1>
     <div class="login-form">
+    {% if error_login %}
+        <div class="alert alert-danger">Wrong password</div>
+    {% endif %}
     <form action="/login" method="POST" novalidate>
         <p>
             {{ rform.text.label }}<br>
