--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -99,7 +99,7 @@
     </div>
 
     </div>
-    <canvas class="bg-dark col-md-6 col-sm-6" id="marksChart" width="360" height="240" onclick="build_chart_by_query()"></canvas>
+    <!--<canvas class="bg-dark col-md-6 col-sm-6" id="marksChart" width="360" height="240" onclick="build_chart_by_query()"></canvas>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script type="text/javascript" src="/static/js/charts/chartBuilder.js"></script>
 
