--- a/app/templates/rate.html
+++ b/app/templates/rate.html
@@ -31,5 +31,14 @@
 {% endfor %}
 </table>
 
+<table class="table">
+{% for row in dates %}
+    <tr>
+    {% for col in row %}
+    <td> {{ col }} </td>
+    {% endfor %}
+    </tr>
+{% endfor %}
+</table>
 
 {% endblock %}
