--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,18 +6,7 @@
 
     <div class="row">
         <div class="col-xs-12 col-md-12 col-sm-12 col-xs-12">
-            <table class="table sorted" cellpadding=5 cellspacing="0">
-                <tr>
-                    <th>Рейтинг</th><th>id учителя</th><th>Фамилия</th><th>Имя</th><th>Сезон</th><th>Критерий</th><th>Группа критерия</th>
-                </tr>
-                {% for r in rec %}
-                    <tr>
-                    {% for i in r %}
-                        <td> {{ i }} </td>
-                    {% endfor%}
-                    </tr>
-                {% endfor %}
-            </table>
+            <p> {{ her }} </p>
         </div>
     </div>
 {% endblock %}
