not download). make architecture

--- a/app/templates/bases/base.html
+++ b/app/templates/bases/base.html
@@ -30,7 +30,7 @@
             <a class="nav-link text-white" href="/signup">Sign up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="/login">Login</a>
+            <a class="nav-link text-white" href="/login_ajax">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="/logout">Log Out</a>
@@ -43,7 +43,7 @@
     </div>
     
     <hr>
-    <h2>{{ user }}</h2>
+
 <script>
     function get_len() {
         console.log(jQuery.ajax);
@@ -86,6 +86,11 @@
     <input type="button" value="Отправить" onclick="get_len();">
     <input type="button" value="Indicators" onclick="get_inds();">
 </form>
+    <style>
+        .h1 {
+            border: 1px solid #169c14;
+        }
+    </style>
 <div class="row" id="len">{% block ht %} {% endblock %}</div>
     <div class="alert alert-dark" role="alert">dev branch</div>
     <div class="content">
