--- a/app/templates/get_data.html
+++ b/app/templates/get_data.html
@@ -1,5 +1,5 @@
-{% extends 'base2.html' %}
+{% extends 'bases/base2.html' %}
 {% block ht %}
-<h1>Hello, blet!</h1>
+<h1 class="h1">Hello, blet!</h1>
 <p>{{ var }}</p>
 {% endblock %}
