--- a/app/templates/login_reg/login.html
+++ b/app/templates/login_reg/login.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %}
-{% block login_block %}
+{% extends 'bases/base.html' %}
+{% block content %}
 <div class="block_form">
     <h1>Sign In</h1>
     <div class="login-form">
@@ -7,18 +7,11 @@
         {{ error_login }}
     {% endif %}
     <form action="/login_ajax" id="login-form" method="post" novalidate>
-        <p>
-            {{ rform.text.label }}<br>
+            {{ rform.text.label }}
             {{ rform.text }}
-        </p>
-        
-        <p>
-            {{ rform.pas.label }}<br>
+            {{ rform.pas.label }}
             {{ rform.pas }}
-        </p>
-        <p>
-            {{ rform.btn_sbt onclick="login()" }}
-        </p>
+        <a href="javascript:;" class="btn btn-primary" onclick="login();">LOGIN?</a>
     </form>
     </div>
 </div>
