--- a/app/templates/bases/base.html
+++ b/app/templates/bases/base.html
@@ -5,7 +5,7 @@
     {% else %}
     <title>PSEK.Rate</title>
     {% endif %}
-    <link href="/static/css/main.css" rel="stylesheet">
+{#    <link href="/static/css/main.css" rel="stylesheet">#}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
             <a class="nav-link text-white" href="/signup">Sign up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="/login_ajax">Login</a>
+            <a class="nav-link text-white" href="/login">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="/logout">Log Out</a>
@@ -65,11 +65,14 @@
 </script>
 <script>
   function get_inds() {
+      var ckey = Math.round(Math.random()*Math.pow(10,16));
+      alert(ckey);
       jQuery.ajax({
+        data: 'key='+ckey,
         type: "POST",
         url: "/get_inds",
-        data: $('form').serialize(),
-        dataType: "html",
+{#        data: $('form').serialize(),#}
+{#        dataType: "html",#}
         success: function(response) {
           var html_temp = jQuery.parseHTML(response)
           $('#len').html(html_temp);
