--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
-
+{% extends 'bases/base.html' %}
+{% block content %}
 <div class="head-content">
     <H1>MAIN PAGE</H1>
 </div>
@@ -10,3 +11,4 @@
             {% endfor %}
         </div>
     </div>
+{% endblock %}
