--- a/app/templates/bases/base.html
+++ b/app/templates/bases/base.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/hmac-sha256.js"></script>
   </head>
   <body>
     <div class="container-fluid">
@@ -111,6 +111,8 @@
 
     {#    <canvas class="bg-dark" id="marksChart" width="360" height="240" onclick="getIndsAndRate()"></canvas>#}
     </div>
+        <script type="text/javascript" src="/static/js/sha256.js"></script>
+
     {#    <script type="text/javascript" src="/static/js/charts/chartBuilder.js"></script>#}
     <script type="text/javascript" src="static/js/login.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
