--- a/app/templates/bases/base.html
+++ b/app/templates/bases/base.html
@@ -112,6 +112,7 @@
 
     {#    <script type="text/javascript" src="/static/js/charts/chartBuilder.js"></script>#}
     <script type="text/javascript" src="/static/js/login.js"></script>
+    <script type="text/javascript" src="/static/js/signup.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 {#    <script type="text/javascript" src="/static/js/charts/chartBuilder.js"></script>#}
   </body>
