--- a/app/templates/roles/methodist/main.html
+++ b/app/templates/roles/methodist/main.html
@@ -1,7 +1,7 @@
 {% extends "bases/base.html" %}
 {% block content %}
 <div class="col-xs-12">
-    <h1>Admin page</h1>
+    <h1>Methodist page</h1>
     <h3>This page {{ user }}</h3>
 </div>
 {% endblock %}
