--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,6 @@
-{% extends 'bases/base.html' %}
+<!-- {% extends 'bases/base_main.html' %}
 {% block content %}
+<div class="content">
 <div class="head-content">
     <H1>MAIN PAGE</H1>
 </div>
@@ -11,4 +12,5 @@
             {% endfor %}
         </div>
     </div>
-{% endblock %}
+</div>
+{% endblock %} -->
