--- a/app/templates/roles/admin/main.html
+++ b/app/templates/roles/admin/main.html
@@ -1,7 +1,10 @@
-{% extends "bases/base.html" %}
-{% block content %}
+{% extends "bases/base_main_content.html" %}
+
+{% block main %}
+<div class="main">
 <div class="col-xs-12">
     <h1>Admin page</h1>
     <h3>This page {{ user }}</h3>
+</div>
 </div>
 {% endblock %}
