fix login / logout , add base template

--- a/app/templates/errors/e404.html
+++ b/app/templates/errors/e404.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends 'bases/base_main.html' %}
+{% block error %}
     {% if msg %}
     {{ msg }}
     {% endif %}
-</body>
-</html>
+{% endblock %}
