--- a/app/templates/roles/head_teacher/main.html
+++ b/app/templates/roles/head_teacher/main.html
@@ -1,5 +1,6 @@
-{% extends "bases/base.html" %}
-{% block content %}
+{% extends "bases/base_main_content.html" %}
+
+{% block main %}
 <div class="col-xs-12">
     <h1>Head teacher page</h1>
     <h3>This page {{ user }}</h3>
