--- a/app/templates/auth/index.html
+++ b/app/templates/auth/index.html
@@ -1,61 +1,33 @@
+<div class="login">
+  <a class="hiddenanchor" id="signup"></a>
+  <a class="hiddenanchor" id="signin"></a>
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <div class="login_wrapper">
+    <div class="animate form login_form">
+      <section class="login_content">
+        <form>
+          <h1>Вход в аккаунт</h1>
+          <div>
+            <input id="login" type="text" class="form-control" placeholder="Логин" required="" />
+          </div>
+          <div>
+            <input id="password" type="password" class="form-control" placeholder="Пароль" required="" />
+          </div>
+          <div>
+            <a class="btn btn-default submit" onclick="login();">Вход</a>
+            <a class="reset_pass" href="#">Забыли пароль?</a>
+          </div>
 
-    <title>PSEK.Rate </title>
-    <!-- Bootstrap -->
-    <link href="static/assets/css/bootstrap.min.css" rel="stylesheet">
-    <!-- NProgress -->
-    <link href="static/assets/css/nprogress.css" rel="stylesheet">
-    <!-- Animate.css -->
-    <link href="static//assets/css/animate.min.css" rel="stylesheet">
-    <!-- Custom Theme Style -->
-    <link href="static/assets/css/custom.min.css" rel="stylesheet">
-    <script type="text/javascript" src="/static/js/login.js"></script>
-    <script type="text/javascript" src="/static/js/signup.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/static/js/sha256.js"></script>
-
-  </head>
-
-  <body class="login">
-    <div>
-      <a class="hiddenanchor" id="signup"></a>
-      <a class="hiddenanchor" id="signin"></a>
-
-      <div class="login_wrapper">
-        <div class="animate form login_form">
-          <section class="login_content">
-            <form>
-              <h1>Вход в аккаунт</h1>
-              <div>
-                <input id="login" type="text" class="form-control" placeholder="Логин" required="" />
-              </div>
-              <div>
-                <input id="password" type="password" class="form-control" placeholder="Пароль" required="" />
-              </div>
-              <div>
-                <a class="btn btn-default submit" onclick="login();">Вход</a>
-                <a class="reset_pass" href="#">Забыли пароль?</a>
-              </div>
-
-              <div class="clearfix"></div>
-              <div class="separator">
-                <div class="clearfix"></div>
-                <br />
-                <div>
-                  <p>©2019 Penis Amputator</p>
-                </div>
-              </div>
-            </form>
-          </section>
-        </div>
-      </div>
+          <div class="clearfix"></div>
+          <div class="separator">
+            <div class="clearfix"></div>
+            <br />
+            <div>
+              <p>©2019 Penis Amputator</p>
+            </div>
+          </div>
+        </form>
+      </section>
     </div>
-  </body>
-</html>
+  </div>
+</div>
