--- a/app/templates/dev_trash/bufer.html
+++ b/app/templates/dev_trash/bufer.html
@@ -32,3 +32,79 @@
     </form>
   </section>
 </div>
+
+
+
+
+
+
+{# login #}
+
+<div class="menu">
+        <div class="menu_collapsed">
+            <div class="logo_wrap"><div class="logo"></div></div>
+            <ul>
+                <li><a href="#data"><img src="static/assets/svg/datagram.svg" alt="Диаграмма">Диаграмма</a></li>
+                <li><a href="#choice"><img src="static/assets/svg/star.svg" alt="Выбор">Выбор</a></li>
+                <li><a href="#table"><img src="static/assets/svg/table.svg" alt="Таблицы">Таблицы</a></li>
+                <li><a href="#report"><img src="static/assets/svg/report2.svg" alt="Отчёт">Отчёт</a></li>
+				<li><a href="#table"><img src="static/assets/svg/message.svg" alt="Таблицы">Сообщения</a></li>
+            </ul>
+        </div><!-- /menu_collapsed -->
+        <!--div class="menu_expanded">
+            <div class="logo_wrap"><div class="logo"></div></div>
+            <ul>
+                <li><img src="static/assets/svg/datagram.svg" alt="Диаграмма"></img>Диаграмма</li>
+                <li><img src="static/assets/svg/choice.svg" alt="Выбор"></img>Выбор
+                <li><img src="static/assets/svg/table.svg" alt="Таблицы"></img>Таблицы</li>
+                <li><img src="static/assets/svg/report.svg" alt="Отчёт"></img>Отчёт</li>
+            </ul>
+        </div--><!-- /menu_expanded -->
+    </div>
+    <div class="content">
+        <div class="header">
+            <div class="left_bar">
+                <a href="#">
+                    <div class="hamburger">
+                        <div class="ham"></div>
+                        <div class="ham"></div>
+                        <div class="ham"></div>
+                    </div>
+                </a>
+                <div class="search">
+                    <img src="static/assets/svg/search.svg" alt="Поиск"></img>
+                    <form action="/get_len" method="post" name="form" autocomplete="off" required>
+                           <input placeholder="Search" id="name" name="name" type="text">
+                    </form>
+                </div>
+            </div>
+            <nav>
+                <ul>
+                    <li>Главная<div class="line"></div></li>
+                    <li>Рейтинг<div class="line"></div></li>
+                    <li>Отчёты<div class="line"></div></li>
+                </ul>
+            </nav>
+            <div class="account">
+                    <div class="user">
+                        <div class="avatar"></div>
+                        <div class="login">Anonymous</div>
+                    </div>
+            </div>
+			<div class="dropdown">
+				<div class="dropdown_content">
+					<a href="#profile"><img src="static/assets/svg/profile.svg" alt="Профиль">Профиль</a>
+					<a href="#settings"><img src="static/assets/svg/settings.svg" alt="Настройки">Настройки</a>
+					<a href="#logout"><img src="static/assets/svg/logout.svg" alt="Выход">Выход</a>
+				</div>
+			</div>
+        </div>
+
+        <div class="card datatable">
+          <div class="card-body">
+
+          </div>
+        </div>
+
+
+    </div>
