--- a/app/templates/bases/base_main.html
+++ b/app/templates/bases/base_main.html
@@ -2,12 +2,11 @@
 <html lang="ru">
 <html>
     <head>
-        <!-- {% if title %}
+        {% if title %}
         <title>{{title}} - PSEK.Rate</title>
         {% else %}
         <title>PSEK.Rate</title>
-        {% endif %} -->
-        <title>her</title>
+        {% endif %}
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +17,9 @@
         <script type="text/javascript" src="/static/js/login.js"></script>
         <script type="text/javascript" src="/static/js/signup.js"></script>
         <script type="text/javascript" src="/static/js/sha256.js"></script>
+        <script type="text/javascript" src="/static/assets/js/ui.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js"></script>
+        <script type="text/javascript" src="/static/js/charts/chartBuilder.js"></script>
         <!-- All stylesheets must be placed here -->
         <link href="static/assets/css/custom.min.css" rel="stylesheet">
         <link href="static/assets/css/animate.min.css" rel="stylesheet">
