--- a/app/templates/roles/admin/main.html
+++ b/app/templates/roles/admin/main.html
@@ -6,5 +6,6 @@
     <h1>Admin page</h1>
     <h3>This page {{ user }}</h3>
 </div>
+<canvas width="160" height="90" id="testdiag"></canvas>
 </div>
 {% endblock %}
