--- a/app/templates/bases/base_main_content.html
+++ b/app/templates/bases/base_main_content.html
@@ -32,7 +32,7 @@
                     </div>
                 </a>
                 <div class="search">
-                    <img src="static/assets/svg/search.svg" alt="Поиск"></img>
+                    <img src="static/assets/svg/search.svg" alt="Поиск">
                     <form action="/get_len" method="post" name="form" autocomplete="off" required>
                            <input placeholder="Search" id="name" name="name" type="text">
                     </form>
