--- a/app/templates/auth/index.html
+++ b/app/templates/auth/index.html
@@ -31,3 +31,10 @@
     </div>
   </div>
 </div>
+{#<div class="login-block">#}
+{#    <h1>Login</h1>#}
+{#    <form>#}
+{#        <input id="login" type="text" class="form-control" placeholder="Логин" required="" />#}
+{#        <input id="password" type="password" class="form-control" placeholder="Пароль" required="" />#}
+{#    </form>#}
+{#</div>#}
