--- a/app/templates/bases/base_main.html
+++ b/app/templates/bases/base_main.html
@@ -20,6 +20,7 @@
         <script type="text/javascript" src="/static/assets/js/ui.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js"></script>
         <script type="text/javascript" src="/static/js/charts/chartBuilder.js"></script>
+        <script type="text/javascript" src="/static/js/inds.js"></script>
         <!-- All stylesheets must be placed here -->
         <link href="static/assets/css/custom.min.css" rel="stylesheet">
         <link href="static/assets/css/animate.min.css" rel="stylesheet">
