--- a/app/templates/bases/base_main_content.html
+++ b/app/templates/bases/base_main_content.html
@@ -4,8 +4,8 @@
         <div class="menu_collapsed">
             <div class="logo_wrap"><div class="logo"></div></div>
             <ul>
-                <li><a onclick="load_diagrams();"><img src="static/assets/svg/datagram.svg" alt="Диаграмма">Диаграмма</a></li>
-                <li><a href="#choice"><img src="static/assets/svg/star.svg" alt="Выбор">Выбор</a></li>
+                <li><a onclick="load__diagrams();"><img src="static/assets/svg/datagram.svg" alt="Диаграмма">Диаграмма</a></li>
+                <li><a onclick="load_group_indicators();" href="#choice"><img src="static/assets/svg/star.svg" alt="Выбор">Выбор</a></li>
                 <li><a href="#table"><img src="static/assets/svg/table.svg" alt="Таблицы">Таблицы</a></li>
                 <li><a href="#report"><img src="static/assets/svg/report2.svg" alt="Отчёт">Отчёт</a></li>
 				<li><a href="#table"><img src="static/assets/svg/message.svg" alt="Таблицы">Сообщения</a></li>
@@ -66,6 +66,7 @@
           	<div class="main_content">
                 <div class="breadcrumbs"><a class="diactive-link">Главная/</a></div>
 				{% block main %}{% endblock %}
+                {% block edit_inds %}{% endblock %}
 			</div>
           </div>
         </div>
